src/objects/ACED_Channel_Provider_Success_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Provider_Unique__c</fullName>
        <description>Concatenate the channel ID +&apos;-&apos;+Provider ID+&apos;-&apos;+Year</description>
        <inlineHelpText>Concatenate the channel ID +&apos;-&apos;+Provider ID+&apos;-&apos;+Year</inlineHelpText>
        <label>Channel Provider Unique</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Channel_Provider__c</fullName>
        <inlineHelpText>This is a helptext for Channel Provider</inlineHelpText>
        <label>Channel Provider</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Only Channel  Providers of same HUB are displayed</errorMessage>
            <filterItems>
                <field>$User.ACED_HUB__c</field>
                <operation>equals</operation>
                <valueField>ACED_Providers__c.HUB__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.ACED_HUB__c</field>
                <operation>equals</operation>
                <value>ACE HUB</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACED_Providers__c</referenceTo>
        <relationshipLabel>Channel Provider Success Rates</relationshipLabel>
        <relationshipName>Channel_Providers_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is a helptext for Channel</inlineHelpText>
        <label>Channel</label>
        <referenceTo>ACED_Channel__c</referenceTo>
        <relationshipLabel>Channel Provider Success Rates</relationshipLabel>
        <relationshipName>Channel_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a helptext for Rate %</inlineHelpText>
        <label>Success Rate</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>This is a helptext for Year</inlineHelpText>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Channel Provider Success Rate</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Provider ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Provider Success Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RangeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>OR( Success_Rate__c &lt;0,Success_Rate__c &gt;1)</errorConditionFormula>
        <errorDisplayField>Success_Rate__c</errorDisplayField>
        <errorMessage>Please enter the Rate within 0 to 100 only</errorMessage>
    </validationRules>
</CustomObject>